--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -200,9 +200,10 @@
 	background-color: #fff;
 	padding-top: 40px;
 	box-shadow: -2px 3px 17px 0 rgba(0,0,0,0.6);
+	z-index: 100;
 
 	&.rightside-menu--close {
-		transform: translateX(100%);
+		transform: translateX(150%);
 		transition: transform .6s;
 	}
 
@@ -306,6 +307,7 @@
 		font-size: 110px;
 		line-height: 134px;
 		color: $title;
+		@extend %title-font;
 
 		&::after {
 			content: '';
@@ -321,7 +323,242 @@
 	&__slider-text {
 		max-width: 585px;
 	}
-	
-
 }
+
+.new-collection {
+	text-align: center;
+	padding: 45px 0 105px;
+
+	&__title {
+		padding-bottom: 25px;
+		margin-bottom: 25px;
+		position: relative;
+		font-size: 35px;
+		line-height: 51px;
+		@extend %title-font;
+		color: $title;
+
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			width: 250px;
+			height: 1px;
+			background-color: #6d7278;
+		}
+	}
+
+	&__text {
+		width: 730px;
+		margin: 0 auto 30px;
+	}
+}
+
+.collection {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-gap: 30px;
+
+	&__item {
+		position: relative;
+		
+		&:hover {
+			.collection__info {
+				opacity: 1;
+			}
+		}
+	}
+
+	&__img {
+		min-height: 350px;
+		object-fit: cover;
+	}
+
+	&__info {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		padding: 10px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		background: rgba(255, 255, 255, .6);
+		opacity: 0;
+		transition: opacity .5s;
+	}
+
+	&__info-title {
+		position: relative;
+		padding-bottom: 19px;
+		margin-bottom: 19px;
+		font-size: 20px;
+		line-height: 24px;
+		color: $title;
+		@extend %title-font;
+
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: 80%;
+			height: 1px;
+			margin: 0 auto;
+			background-color: #6d7278;
+		}
+	}
+
+	&__info-text {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 28px;
+		color: #707070;
+	}
+}
+
+.decor {
+	padding: 170px 0 155px;
+	background-image: url(../images/decor-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height: 600px;
+
+	&__title {
+		position: relative;
+		padding-bottom: 22px;
+		margin-bottom: 22px;
+		max-width: 540px;
+		font-weight: 700;
+		font-size: 60px;
+		line-height: 80px;
+		color: $title;
+		@extend %title-font;
+
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 200px;
+			height: 1px;
+			background-color: #6d7278;
+		}
+	}
+
+	&__text {
+		max-width: 540px;
+	}
+}
+
+.works-path {
+	padding: 80px 0 30px;
+
+	&__title {
+		margin-bottom: 40px;
+		font-size: 36px;
+		line-height: 51px;
+		text-align: center;
+		color: $title;
+		@extend %title-font;
+	}
+
+	&__items--box {
+		display: flex;
+		position: relative;
+		border-bottom: 2px solid rgba($title, .7);
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -6px;
+			width: 10px;
+			height: 10px;
+			border-radius: 50%;
+			background-color: $title;
+		}
+	}
+
+	&__item {
+		position: relative;
+		max-width: 250px;
+	}
+
+	&__item--production {
+		margin-left: 317px;
+
+	}
+
+	&__item--measurements, 
+	&__item--production {
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 20px;
+			width: 2px;
+			background-color: rgba($title, .7);
+		}
+	}
+
+	&__item--measurements {
+		margin-left: 306px;
+		padding-top: 30px;
+		&::after {
+			top: 0;
+			left: 0;
+		}
+	}
+
+	&__item--production,
+	&__item--designer {
+		padding-bottom: 30px;
+	}
+
+
+	&__item-title {
+		position: relative;
+		padding-left: 51px;
+		margin-bottom: 18px;
+		padding-top: 13px;
+		@extend %title-font;
+		color: $title;
+
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 3px;
+			width: 42px;
+			height: 42px;
+			background-repeat: no-repeat;
+		}
+	}
+
+	&__item-title--designer::before {
+		background-image: url(../images/designer-tool.svg);
+		
+	}
+
+	&__item-title--production::before {
+		background-image: url(../images/production.svg);
+	}
+
+	&__item-title--measurements::before {
+		top: 14px;
+		background-image: url(../images/measurements.svg);
+	}
+}
+
+
+
+
+
 
