--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -557,6 +557,69 @@
 	}
 }
 
+.gallery {
+	padding-top: 80px;
+	padding-bottom: 90px;
+
+	&__buttons {
+		text-align: center;
+		margin-bottom: 40px;
+	}
+
+	&__btn {
+		padding: 6px 16px;
+		border: 1px solid rgba(#454647, .5);
+		border-radius: 20px;
+		cursor: pointer;
+		color: #8f8d8d;
+		background-color: transparent;
+		font-weight: 600;
+		font-size: 14px;
+
+		&:not(:last-child) {
+			margin-right: 25px;
+		}
+
+		&:focus {
+			outline: none;
+			border: 1px solid $title;
+			border-radius: 20px;
+		}
+	}
+
+	.mixitup-control-active {
+		border: 1px solid rgba(#ffef35, .5);
+		background-color: rgba(#ffef35, .5);
+		color: $title;
+
+		&:focus {
+			outline: none;
+			border: 1px solid $title;
+			border-radius: 20px;
+		}
+	}
+	
+	&__items {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		grid-gap: 30px 35px;
+	}
+
+	&__item:first-child {
+		grid-column: span 2;
+		grid-row: span 2;
+	}
+
+	&__img {
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+		max-height: 1148px;
+	}
+
+}
+
 
 
 
