--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,3 +5,11 @@ $default: #5a5a5a;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
+
+    //миксин для ошибки funcybox
+@function max($numbers...){
+  @return m#{a}x(#{$numbers});
+}
+@function min($numbers...){
+  @return m#{i}n(#{$numbers});
+}
