--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -40,7 +40,24 @@
 	&__list-link {
 		@extend %title-font;
 		color: rgba(54, 56, 56, 0.9);
-		line-height: 22;
+		line-height: 22px;
+	}
+
+	&__list-link--active {
+		padding-bottom: 4px;
+		position: relative;
+
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			// width: 100%;
+			height: 2px;
+			background-color: rgba(#363838, .7);
+			border-radius: 1px;
+		}
 	}
 }
 
@@ -128,7 +145,7 @@
 		width: 125px;
 		margin-right: auto;
 		margin-left: 100px;
-	} 
+	}
 
 	&__social-item, &__menu-item {
 		margin-bottom: 15px;
@@ -166,7 +183,7 @@
 	&__social-link--pinterest::before {
 		background-image: url(../images/pinterest.svg);
 	}
-	
+
 	&__social-link--whatsapp::before {
 		background-image: url(../images/whatsapp.svg);
 	}
@@ -260,6 +277,26 @@
 	}
 }
 
+.breadcrumbs {
+	padding: 14px 0;
+	background-color: rgba(#dfdfdf, .5);
+
+	&__list {
+		display: flex;
+	}
+
+	&__item:not(:last-child)::after {
+		content: '/';
+		margin-right: 4px;
+	}
+
+	&__link {
+		font-size: 14px;
+		line-height: 28px;
+		color: $default;
+	}
+}
+
 
 .top {
 	&__inner {
@@ -327,7 +364,7 @@
 
 .new-collection {
 	text-align: center;
-	padding: 45px 0 105px;
+	padding: 45px 0 35px;
 
 	&__title {
 		padding-bottom: 25px;
@@ -361,10 +398,11 @@
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 30px;
+  padding-bottom: 70px;
 
 	&__item {
 		position: relative;
-		
+
 		&:hover {
 			.collection__info {
 				opacity: 1;
@@ -495,7 +533,7 @@
 
 	}
 
-	&__item--measurements, 
+	&__item--measurements,
 	&__item--production {
 		&::after {
 			content: '';
@@ -544,7 +582,7 @@
 
 	&__item-title--designer::before {
 		background-image: url(../images/designer-tool.svg);
-		
+
 	}
 
 	&__item-title--production::before {
@@ -598,7 +636,7 @@
 			border-radius: 20px;
 		}
 	}
-	
+
 	&__items {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
@@ -617,9 +655,230 @@
 		height: 100%;
 		max-height: 1148px;
 	}
-
 }
 
+.blog-box {
+	padding-bottom: 100px;
+
+	&__title {
+		margin: 0 auto 30px;
+		max-width: 430px;
+		@extend %title-font;
+		color: $title;
+		font-size: 36px;
+		line-height: 51px;
+		text-align: center;
+	}
+
+	&__items {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 30px;
+	}
+
+	&__img-link {
+		display: inline-block;
+		margin-bottom: 20px;
+		// max-width: 539px;
+		// max-height: 307px;
+	}
+
+	&__links {
+		margin-bottom: 9px;
+	}
+
+	&__date, &__author, &__theme {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 28px;
+		color: #707070;
+	}
+
+	&__item-title {
+		font-size: 24px;
+		line-height: 38px;
+		@extend %title-font;
+		color: $title;
+	}
+}
+
+.about {
+	&__preview {
+		padding: 160px 0;
+		margin-top: -55px;
+		background-image: url(../images/about-bg.jpg);
+		background-repeat: no-repeat;
+		background-position: top center;
+		background-size: cover;
+	}
+
+	&__title {
+		text-align: center;
+		font-size: 60px;
+		line-height: 80px;
+		color: $title;
+		@extend %title-font;
+	}
+
+	&__content {
+		padding: 130px 0 40px;
+	}
+
+	&__content-title {
+		margin-bottom: 20px;
+		padding-bottom: 20px;
+		position: relative;
+		max-width: 75%;
+		@extend %title-font;
+		color: $title;
+		font-size: 36px;
+		line-height: 60px;
+
+		&::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 200px;
+			height: 1px;
+			background-color: #6D7278;
+		}
+	}
+
+	&__content-text {
+		padding-left: 284px;
+
+		p{
+			margin-bottom: 30px;
+		}
+	}
+
+	&__popup {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-image: url(../images/video-bg.jpg);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: top center;
+		min-height: 404px;
+	}
+
+	&__play {
+		position: relative;
+		display: inline-block;
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		background-color: rgba(54, 56, 56, 0.4);
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%) translateX(-45%);
+			left: 50%;
+			width: 40px;
+			height: 40px;
+			background-image: url(../images/play.svg);
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+	}
+}
+
+.inspiration {
+  position: relative;
+  padding-top: 100px;
+
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 362px;
+      background-image: url(../images/inspiration-bg.jpg);
+      background-repeat: no-repeat;
+      z-index: -1;
+    }
+
+  &__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    margin-right: 78px;
+    margin-left: -230px;
+  }
+
+  &__content {
+    max-width: 825px;
+  }
+
+  &__title {
+    position: relative;
+    margin-bottom: 24px;
+    padding-bottom: 15px;
+		@extend %title-font;
+		color: $title;
+    font-size: 36px;
+    line-height: 60px;
+
+    &::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 200px;
+			height: 1px;
+			background-color: #6D7278;
+		}
+  }
+
+  &__text {
+    margin-bottom: 30px;
+  }
+
+  &__item-content {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 14px;
+    border-bottom: 2px solid #fff;
+    border-radius: 4px;
+  }
+
+  &__item {
+    margin-bottom: 33px;
+  }
+
+  &__item-text,
+  &__item-num {
+    @extend %title-font;
+    line-height: 23px;
+    color: $title;
+  }
+
+  &__line {
+    margin-top: -2px;
+    height: 2px;
+    border-radius: 4px;
+    background-color: $title;
+  }
+}
+
+.partners {
+  padding-top: 16px;
+  padding-bottom: 60px;
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 
 
 
