--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -64,6 +64,26 @@ body {
 	}
 }
 
+.email {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 22px;
+  padding-left: 30px;
+  font-weight: 600;
+  font-size: 14px;
+  color: $title;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 8px;
+    background-image: url(../images/email-icon.svg);
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 12px;
+  }
+}
 
 
 
