--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -89,26 +89,7 @@
 		max-width: 475px;
 	}
 
-	&__info-email {
-		position: relative;
-		display: inline-block;
-		margin-bottom: 22px;
-		padding-left: 30px;
-		font-weight: 600;
-		font-size: 14px;
-		color: $title;
 
-		&::before {
-			content: '';
-			position: absolute;
-			left: 0;
-			top: 8px;
-			background-image: url(../images/email-icon.svg);
-			background-repeat: no-repeat;
-			width: 16px;
-			height: 12px;
-		}
-	}
 
 	&__form {
 		display: flex;
@@ -278,6 +259,8 @@
 }
 
 .breadcrumbs {
+  position: relative;
+  z-index: 99;
 	padding: 14px 0;
 	background-color: rgba(#dfdfdf, .5);
 
@@ -655,6 +638,13 @@
 		height: 100%;
 		max-height: 1148px;
 	}
+
+  &.gallery-page {
+    .gallery__item:nth-child(8) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+  }
 }
 
 .blog-box {
@@ -880,7 +870,62 @@
   }
 }
 
+.map {
+  margin-top: -53px;
+  margin-bottom: 50px;
+}
 
+.contacts {
+  &__title {
+    position: relative;
+    margin-bottom: 40px;
+    padding-bottom: 19px;
+		@extend %title-font;
+		color: $title;
+    font-size: 36px;
+    line-height: 60px;
 
+    &::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 200px;
+			height: 1px;
+			background-color: #6D7278;
+		}
+  }
+
+  &__social-list {
+    display: flex;
+    align-items: center;
+    margin-bottom: 29px;
+  }
+
+  &__social-item {
+    align-items: center;
+  }
+
+  &__social-item:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  &__social-link {
+    display: inline-block;
+    position: relative;
+    width: 19px;
+    height: 16px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 2px;
+      width: 19px;
+      height: 16px;
+      background-repeat: no-repeat;
+    }
+  }
+}
 
 
