--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -85,7 +85,29 @@ body {
   }
 }
 
+.form-button {
+  padding: 6px 60px;
+  background-color: $title;
+  border: 1px solid $title;
+  border-radius: 21px;
+  font-weight: 600;
+  color: #fffff0;
+  cursor: pointer;
+}
 
+.input {
+  padding: 6px 17px;
+  border: 1px solid #dfdfdf;
+  border-radius: 20px;
+  // background-color: transparent;
+
+  &::placeholder {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 27px;
+    color: #a1a1a1
+  }
+}
 
 
 
