--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -88,18 +88,16 @@
 		max-width: 475px;
 	}
 
-
-
 	&__form {
 		display: flex;
 	}
 
 	&__form-input {
-		// padding: 6px 10px 6px 18px;
+		padding: 6px 10px 6px 18px;
 		margin-right: 9px;
 		width: 100%;
-		// border: 1px solid rgba($title, .7);
-		// border-radius: 21px;
+		border: 1px solid rgba($title, .7);
+		border-radius: 21px;
 		background-color: transparent;
 	}
 
@@ -732,28 +730,6 @@
 		background-position: top center;
 		min-height: 404px;
 	}
-
-	&__play {
-		position: relative;
-		display: inline-block;
-		width: 80px;
-		height: 80px;
-		border-radius: 50%;
-		background-color: rgba(54, 56, 56, 0.4);
-
-		&::after {
-			content: '';
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%) translateX(-45%);
-			left: 50%;
-			width: 40px;
-			height: 40px;
-			background-image: url(../images/play.svg);
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-	}
 }
 
 .inspiration {
@@ -994,9 +970,281 @@
 }
 
 .sidebar {
-  &__input {
+  max-width: 350px;
 
+  &__form {
+    position: relative;
+    margin-bottom: 40px;
+  }
+
+  &__input {
+    width: 100%;
+		padding: 6px 38px 6px 18px;
+		border: 1px solid rgba($title, .7);
+		border-radius: 21px;
+		background-color: transparent;
+    color: $default;
+
+    ::placeholder {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
+      line-height: 27px;
+      color: #a1a1a1;
+    }
+  }
+
+  &__search-button {
+    position: absolute;
+    top: 10px;
+    right: 19px;
   }
 }
 
+
+
+
+.blog {
+  padding: 60px 0 100px;
+
+  &__items {
+    max-width: 730px;
+    margin-right: 30px;
+  }
+
+  &__item {
+    margin-bottom: 80px;
+  }
+
+  &__item-img {
+    margin-bottom: 24px;
+  }
+
+  &__item-date,
+  &__item-author,
+  &__item-theme {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #707070;
+  }
+
+  &__item-title {
+    margin-bottom: 6px;
+  }
+
+  &__item-link {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 38px;
+    color: $title;
+  }
+
+  &__blockquote {
+    padding: 54px 64px;
+    margin-bottom: 50px;
+    background-color: rgba(223, 223, 223, 0.5);
+    font-style: italic;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 38px;
+    text-align: center;
+    color: #363838;
+  }
+
+  &__blockquote-author {
+    margin-top: 23px;
+    padding-top: 23px;
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    color: rgba(54, 56, 56, .9);
+
+    &::after {
+			content: '';
+			position: absolute;
+			left: 50%;
+      transform: translate(-50%);
+			top: 0;
+			width: 200px;
+			height: 1px;
+			background-color: #6D7278;
+		}
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__category {
+    margin-bottom: 47px;
+  }
+
+  &__sidebar-title {
+    @extend %title-font;
+    line-height: 23px;
+  }
+
+  &__category-title {
+    margin-bottom: 15px;
+  }
+
+  &__category-item:not(:last-child) {
+    margin-bottom: 12px;
+  }
+
+  &__category-link {
+    color: $default;
+  }
+
+  &__tags {
+    margin-bottom: 50px;
+  }
+
+  &__tags-title {
+    margin-bottom: 18px;
+  }
+
+  &__tags-link {
+    display: inline-block;
+    padding: 0 16px;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #8f8d8d;
+    border: 1px solid rgba(#454647, .5);
+    border-radius: 14px;
+  }
+
+  &__tags-link:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  &__social-list {
+    display: flex;
+  }
+
+  &__social-item:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  &__social-link {
+    display: inline-block;
+    position: relative;
+    width: 16px;
+    height: 16px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 16px;
+      height: 16px;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.resent-posts {
+  margin-bottom: 50px;
+
+  &__title {
+    margin-bottom: 24px;
+  }
+
+  &__item {
+    margin-bottom: 11px;
+    color: #a1a1a1;
+  }
+
+  &__link {
+    display: block;
+    color: $default;
+  }
+
+  &__date,
+  &__author {
+    font-size: 14px;
+    line-height: 28px;
+    color: #a1a1a1;
+  }
+}
+
+.article-video {
+  &__box {
+    position: relative;
+  }
+
+  &__play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.article-slider {
+  &__box {
+    position: relative;
+  }
+
+  &__btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    width: 10px;
+    height: 17px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  &__prev {
+    left: 16px;
+    background-image: url(../images/arrow-slide-prev.svg);
+  }
+
+  &__next {
+    right: 16px;
+    background-image: url(../images/arrow-slide-next.svg);
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__list {
+    display: flex;
+  }
+
+  &__item,
+  &__arrow {
+    margin: 0 6px;
+  }
+
+  &__arrow-disabled {
+    display: none;
+  }
+
+  &__num {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 28px;
+    color: #707070;
+  }
+
+  &__num-active {
+    color: #363838;
+  }
+}
+
+// 10:33
 
